# FreeDLC

./: pyproject.toml
deeplabcut/: __init__.py  cli.py  compat.py
deeplabcut/core/: crossvalutils.py  engine.py  trackingutils.py  visualization.py  weight_init.py
deeplabcut/core/config/: base_config.py  project_config.py
deeplabcut/create_project/: __init__.py  modelzoo.py  new.py
deeplabcut/generate_training_dataset/: metadata.py  multiple_individuals_trainingsetmanipulation.py  trainingsetmanipulation.py
deeplabcut/gui/: tracklet_toolbox.py
deeplabcut/gui/displays/: selected_shuffle_display.py
deeplabcut/gui/tabs/: create_training_dataset.py  modelzoo.py  train_network.py
deeplabcut/modelzoo/: video_inference.py
deeplabcut/modelzoo/generalized_data_converter/: utils.py
deeplabcut/pose_estimation_3d/: plotting3D.py
deeplabcut/pose_estimation_pytorch/apis/: prune_paf_graph.py  visualization.py
deeplabcut/pose_estimation_pytorch/config/: metadata.py  paf_parameters.py  pose.py
deeplabcut/pose_estimation_pytorch/data/: transforms.py
deeplabcut/pose_estimation_pytorch/models/detectors/: torchvision.py
deeplabcut/utils/: auxiliaryfunctions.py  visualization.py
deeplabcut/workspace/: __init__.py  _snapshots.py  annotations.py  apply.py  cli.py  coco_export.py  evaluate.py  ids.py  label_video.py  layout.py  manifest.py  metrics.py  migrate.py  model_bundle.py  native_train.py  onnx_export.py  project.py  schema.py  skeleton_lib.py  track.py  train.py  util.py
deeplabcut/workspace/skeletons/: RodentH5B7T3.toml
docs/: onnx_export.md
tests/workspace/: run_all.sh  test_annotations.py  test_apply.py  test_cli.py  test_coco_export.py  test_decorators.py  test_migrate.py  test_onnx.py  test_parquet_io.py  test_portable.py  test_skeleton_lib.py  test_track.py  test_train_eval.py  test_workspace.py
