[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "deeplabcut"
version = "3.0.0"
description = "Markerless pose-estimation of user-defined features with deep learning"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
  "animal behavior",
  "markerless tracking",
  "neuroscience",
  "pose estimation",
]
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "albumentations",
  "dlclibrary>=0.0.12",
  "einops",
  "filelock>=3.12",
  "filterpy>=1.4.4",
  "h5py>=3.15.1; platform_system=='Darwin'",
  "huggingface-hub>=0.23",
  "matplotlib>=3.6",
  "networkx>=2.6",
  "numba>=0.61",
  "numpy>=2",
  "opencv-python-headless",
  "packaging>=26",
  # Migration to pandas 3.0 is tracked in https://github.com/DeepLabCut/DeepLabCut/issues/3362.
  "pandas[hdf5,performance]>=2.2",
  "pyarrow>=16",
  "pillow>=7.1",
  "pycocotools",
  "pydantic>=2",
  "pyyaml",
  "ruamel-yaml>=0.15",
  "scikit-image>=0.17",
  "scikit-learn>=1",
  "scipy>=1.9",
  "statsmodels>=0.11",
  "tables>3.8",
  "timm",
  "tomli-w>=1.0",
  "torch>=2",
  "torchvision",
  "tqdm",
]
[[project.authors]]
name = "M-Lab of Adaptive Intelligence"
email = "mackenzie@deeplabcut.org"
[[project.authors]]
name = "Mathis Group for Computational Neuroscience and AI"
email = "alexander@deeplabcut.org"
[project.optional-dependencies]
# Everything a user might want in one install: `pip install deeplabcut[all]`.
# (docs is build tooling and is intentionally left out.)
all = [
  "deeplabcut[onnx]",
  "deeplabcut[gui]",
  "deeplabcut[fmpose3d]",
  "deeplabcut[modelzoo]",
  "deeplabcut[wandb]",
]
onnx = [
  "onnx>=1.16",
  "onnxruntime>=1.18",
  # torch's modern (dynamo) onnx exporter imports onnxscript at export time
  "onnxscript>=0.2",
]
gui = [
  "napari-deeplabcut>=0.3.1",
  "pyside6; platform_system!='Linux' or platform_machine!='x86_64'",
  # Avoid 6.10.0 only on Linux x86_64 (fails for older glib versions)
  "pyside6<6.10; platform_system=='Linux' and platform_machine=='x86_64'",
  "qdarkstyle==3.1",
]
docs = [
  "jupyter-book==1.0.4.post1",
  "numpydoc",
  "sphinxcontrib-mermaid",
]
fmpose3d = [ "fmpose3d>=0.0.8" ]
modelzoo = [ "huggingface-hub" ]
wandb = [ "wandb" ]
[project.scripts]
dlc = "deeplabcut.__main__:main"
dlc-ws = "deeplabcut.workspace.cli:main"
[project.urls]
Homepage = "https://www.deeplabcut.org"
Repository = "https://github.com/DeepLabCut/DeepLabCut"
Documentation = "https://deeplabcut.github.io/DeepLabCut/README.html"

[dependency-groups]
dev = [
  "coverage",
  "nbformat>5",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.setuptools]
include-package-data = false
[tool.setuptools.package-data]
"*" = [ "*.yaml", "*.yml", "*.json", "*.qss", "*.png", "*.md", "*.sh", "*.toml" ]
[tool.setuptools.packages.find]
include = [ "deeplabcut*" ]
exclude = [ "tests*", "docs*", "examples*" ]

[tool.uv]
[tool.uv.pip]
torch-backend = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
[tool.ruff.lint]
select = [ "E", "F", "B", "I", "UP", "PIE" ]
ignore = [ "E741", "B007", "UP042" ]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401", "E402" ]
"deeplabcut/**/__init__.py" = [ "F403" ]
"deeplabcut/gui/window.py" = [ "F403" ]
"*.ipynb" = [ "E402" ]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.12"
generate_python_version_classifiers = true
# Avoid collapsing tables to field.key = value format (less readable)
table_format = "long"

[tool.pytest.ini_options]
markers = [
  "require_models: mark test as requiring models to run",
  "fmpose3d: tests for fmpose3d integration",
  "unittest: fast unit-level tests",
  "functional: functional/integration-style tests",
  "deprecated: tests for deprecated APIs kept for backward-compatibility",
]
